design social and ranking

--- a/front/src/molecules/ranking/ranking.css
+++ b/front/src/molecules/ranking/ranking.css
@@ -1,8 +1,8 @@
-#containerRank {
+/* #containerRank {
     border: 2px solid grey;
     padding: 2%;
     width: 25%;
-}
+} */
 
 #title {
     justify-content: center;
