--- a/front/src/molecules/social/social.css
+++ b/front/src/molecules/social/social.css
@@ -1,8 +1,8 @@
-#container {
+/* #container {
     border: 2px solid grey;
     padding: 2%;
     width: 25%;
-}
+} */
 
 #word {
     margin: 20px;
