--- a/front/src/game/Game.css
+++ b/front/src/game/Game.css
@@ -1,3 +1,22 @@
 .paper {
     position: absolute;
 }
+
+#fondEcranPartie {
+    background-image: url("./../commun/images/wood.png");
+    background-size: cover;
+    min-width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background-repeat: no-repeat;
+    margin-block-end: 20px;
+    margin-inline-end: 20px;
+}
+
+#rank {
+    border-radius: 10px;
+    background: '#D3D3D3';
+    margin-top: 10px;
+}
