new position for games component

--- a/front/src/game/Game.css
+++ b/front/src/game/Game.css
@@ -29,13 +29,16 @@
 
 #rightGrisBoarder {
     padding: 40px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 #dicePosition {
     padding: 0;
     margin-bottom: 1px;
+    bottom: 4%;
 }
 
 #gridSize {
-    height: 914px
+    height: 814px
 }
