--- a/front/src/game/Game.css
+++ b/front/src/game/Game.css
@@ -1,44 +1,48 @@
 .paper {
-    position: absolute;
+  position: absolute;
+}
+
+#left {
+  padding: 2%;
+  /* border: 1px solid blue; */
 }
 
 #fondEcranPartie {
-    background-image: url("./../commun/images/wood.png");
-    background-size: cover;
-    min-width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background-repeat: no-repeat;
-    margin-block-end: 20px;
-    margin-inline-end: 20px;
+  background-image: url("./../commun/images/wood.png");
+  background-size: cover;
+  min-width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-repeat: no-repeat;
+  /* margin-block-end: 20px;
+  margin-inline-end: 20px;*/
 }
 
 #rank {
-    border-radius: 10px;
-    margin-top: 10px;
+  border-radius: 5px;
+  margin-top: 10px;
+  /* border: 1px solid yellow; */
+  background: #d3d3d3;
 }
 
 #plateau {
-    /* margin: 0; */
-    /* box-sizing: fixed; */
-    margin-top: auto;
-    margin-bottom: auto;
+  padding: 2%;
+  /* border: 1px solid red; */
 }
 
 #rightGrisBoarder {
-    padding: 40px;
-    margin-top: auto;
-    margin-bottom: auto;
+  padding: 2%;
+  /* border: 1px solid pink; */
 }
 
 #dicePosition {
-    padding: 0;
-    margin-bottom: 1px;
-    bottom: 4%;
+  padding: 0;
+  margin-bottom: 1px;
+  bottom: 4%;
 }
 
 #gridSize {
-    height: 814px
+  height: 100%;
 }
