--- a/front/src/lobby/lobby.css
+++ b/front/src/lobby/lobby.css
@@ -1,28 +1,27 @@
 #fondEcran {
-    background-image: url("./../commun/images/wood.png");
-    background-size: cover;
-    min-width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background-repeat: no-repeat;
-    margin-block-end: 20px;
-    margin-inline-end: 20px;
+  background-image: url("./../commun/images/wood.png");
+  background-size: cover;
+  min-width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-repeat: no-repeat;
+  margin-block-end: 20px;
+  margin-inline-end: 20px;
 }
 
 #logo {
-    width: auto;
-    height: 100px;
-    size: 100px;
+  width: auto;
+  height: 100px;
+  size: 100px;
 }
 
 #typo {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1.2em;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1.2em;
 }
 
-#button {
-    background-color: brown;
-    color: blue;
+a {
+  text-decoration: none;
 }
