CSS part to and Doc project part one

--- a/front/src/game/Game.css
+++ b/front/src/game/Game.css
@@ -38,9 +38,9 @@
 }
 
 #dicePosition {
-  padding: 0;
-  margin-bottom: 1px;
-  bottom: 4%;
+  position: absolute;
+  bottom: 5%;
+  margin-left: 4%;
 }
 
 #gridSize {
