--- a/front/src/game/popup/createGame/CreateGame.css
+++ b/front/src/game/popup/createGame/CreateGame.css
@@ -1,7 +1,7 @@
 #contain {
   /* border: 1px solid blue; */
   width: 90%;
-  height: 100%;
+  height: 90%;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -11,6 +11,8 @@
 #containTwo {
   width: 100%;
   height: 80%;
+  position: absolute;
+  bottom: 5%;
   /* border: 1px solid pink; */
 }
 
@@ -32,7 +34,6 @@
 }
 
 #switch {
-  margin-top: 10%;
   /* border: 1px solid blue; */
   display: flex;
   align-items: center;
