--- a/front/src/game/popup/waitingForPlayers/WaitingForPlayers.css
+++ b/front/src/game/popup/waitingForPlayers/WaitingForPlayers.css
@@ -3,7 +3,8 @@ h1 {
 }
 
 #playersConnected {
-  margin-top: 20%;
-  text-align: center;
+  position: absolute;
+  bottom: 40%;
+  left: 40%;
   font-size: 3em;
 }
